# deepstream-startup

./: .gitignore  CMakeLists.txt  README.md  deepstream_test5_app_main.c
configs/: test5_config_file_src_infer.yml  test5_config_file_src_infer_tiler_demux.yml  test5_config_file_src_infer_tracker_sgie.txt  test5_config_file_src_infer_tracker_sgie.yml  test5_dec_infer-resnet_tracker_sgie_tiled_display_int8.yml
